# autoria-analysis

./: .gitignore  README.md  pyproject.toml
carria/: __init__.py  __main__.py  _logger_config.py  app.py  client.py  constants.py  db_client.py  models.py  parser.py  utils.py
