[project]
name = "carria"
version = "0.1.0"
description = ""
authors = [
    {name = "Jarki",email = "yaroslav.ivashko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "duckdb (>=1.3.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.analyze.dependencies]
jupyterlab = "^4.4.3"
plotly = "^6.1.2"

